<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_niveles"
    tools:context=".ExtraLevelsActivity">

    <ImageButton
        android:id="@+id/btnBackExtraLvl"
        android:layout_width="66dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="102dp"
        android:layout_toStartOf="@+id/textView"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/BackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backbutton" />

    <TextView
        android:id="@+id/txtvExtralvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Extra_Level"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBackLvlMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/selection_group_ExLvl"
        android:layout_width="158dp"
        android:layout_height="69dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="228dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvExtralvl"
        app:layout_constraintVertical_bias="0.068">

        <RadioButton
            android:id="@+id/practice_button_ExLvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:text="@string/Practice"
            android:textColor="#FAFFFFFF"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/evaluation_button_ExLvl"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/Evaluation"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnExlvl1"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/btnExLvl2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection_group_ExLvl" />

    <Button
        android:id="@+id/btnExLvl3"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnExLvl2"
        app:layout_constraintTop_toBottomOf="@+id/selection_group_ExLvl" />

    <Button
        android:id="@+id/btnExLvl2"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection_group_ExLvl" />


    <Button
        android:id="@+id/btnBacktoLvlM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/Levels"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selection_group_ExLvl"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/botonborrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0008"
        android:text="@string/Delete"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExLvl2" />
</android.support.constraint.ConstraintLayout>